--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
     "node": ">=4"
   },
   "scripts": {
+    "build:sdk": "./node_modules/.bin/lb-sdk server/server client/src/app/shared/sdk -l angular2 -d ng2web -i disabled",
     "lint": "eslint .",
     "prestart": "pushd client && ng build && popd",
     "start": "node .",
     "posttest": "npm run lint"
   },
   "dependencies": {
+    "@angular/http": "^7.2.1",
+    "@mean-expert/loopback-component-realtime": "^1.0.2",
+    "@mean-expert/loopback-sdk-builder": "^2.3.1",
     "bcrypt": "^3.0.3",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "dotenv": "^6.2.0",
     "helmet": "^3.10.0",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-connector-postgresql": "^3.5.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
