--- a/package.json
+++ b/package.json
@@ -7,17 +7,30 @@
   },
   "scripts": {
     "build:sdk": "./node_modules/.bin/lb-sdk server/server client/src/app/shared/sdk -l angular2 -d ng2web -i disabled",
-    "lint": "eslint .",
-    "prestart": "pushd client && ng build && popd",
+    "lint": "ng lint",
+    "prestart": "pushd client && \"../node_modules/.bin/ng\" build && popd",
     "start": "node .",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "ng": "ng",
+    "build": "ng build",
+    "test": "ng test",
+    "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.1",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
     "bcrypt": "^3.0.3",
     "compression": "^1.0.3",
+    "core-js": "^2.5.4",
     "cors": "^2.5.2",
     "dotenv": "^6.2.0",
     "helmet": "^3.10.0",
@@ -25,12 +38,34 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0"
+    "strong-error-handler": "^3.0.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.1",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
     "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0"
+    "eslint-config-loopback": "^8.0.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   },
   "repository": {
     "type": "",
