Add public and auth modules

--- a/client/angular.json
+++ b/client/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../node_modules/auth0-js/build/auth0.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -51,6 +53,15 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "stage": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stage.ts"
+                }
+              ],
+              "aot": true
             }
           }
         },
