--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build:sdk": "./node_modules/.bin/lb-sdk server/server client/src/app/shared/sdk -l angular2 -d ng2web -i disabled",
     "build:ng": "cd client && \"../node_modules/.bin/ng\" build",
+    "heroku-postbuild": "cd client && \"../node_modules/.bin/ng\" build --aot -c=$NODE_ENV",
     "lint": "ng lint",
     "start": "node .",
-    "postinstall": "cd client && \"../node_modules/.bin/ng\" build --aot",
     "posttest": "npm run lint",
     "ng": "ng",
     "test": "ng test",
@@ -26,14 +26,19 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
+    "auth0": "^2.14.0",
+    "auth0-js": "^9.10.0",
+    "auth0-lock": "^11.13.2",
     "bcrypt": "^3.0.3",
     "compression": "^1.0.3",
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
     "dotenv": "^6.2.0",
     "helmet": "^3.10.0",
+    "lodash": "^4.17.11",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
