--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "auth0": "^2.14.0",
     "auth0-js": "^9.10.0",
     "auth0-lock": "^11.13.2",
+    "aws-sdk": "^2.398.0",
     "bcrypt": "^3.0.3",
+    "bluebird": "^3.5.3",
     "compression": "^1.0.3",
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
