--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0",
