--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,5 +46,9 @@
   "PublicPageElement": {
     "dataSource": "OrderManager",
     "public": false
+  },
+  "Client": {
+    "dataSource": "OrderManager",
+    "public": true
   }
 }
