--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.5",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.1",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -42,6 +44,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
     "dotenv": "^6.2.0",
+    "hammerjs": "^2.0.8",
     "helmet": "^3.10.0",
     "lodash": "^4.17.11",
     "loopback": "^3.22.0",
