Add client detail page.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -50,5 +50,9 @@
   "Client": {
     "dataSource": "OrderManager",
     "public": true
+  },
+  "DeliveryRoute": {
+    "dataSource": "OrderManager",
+    "public": true
   }
 }
