--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
+    "angular2-text-mask": "^9.0.0",
     "auth0": "^2.14.0",
     "auth0-js": "^9.10.0",
     "auth0-lock": "^11.13.2",
@@ -62,7 +63,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
