--- a/server/model-config.json
+++ b/server/model-config.json
@@ -54,5 +54,9 @@
   "DeliveryRoute": {
     "dataSource": "OrderManager",
     "public": true
+  },
+  "EndUser": {
+    "dataSource": "OrderManager",
+    "public": false
   }
 }
