--- a/server/model-config.json
+++ b/server/model-config.json
@@ -49,14 +49,14 @@
   },
   "Client": {
     "dataSource": "OrderManager",
-    "public": true
+    "public": false
   },
   "DeliveryRoute": {
     "dataSource": "OrderManager",
-    "public": true
-  },
-  "EndUser": {
-    "dataSource": "OrderManager",
     "public": false
+  },
+  "EmployeeData": {
+    "dataSource": "db",
+    "public": true
   }
 }
