Add Winston logger and postgres custom transport.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
     "angular2-text-mask": "^9.0.0",
+    "app-root-path": "^2.1.0",
     "auth0": "^2.14.0",
     "auth0-js": "^9.10.0",
     "auth0-lock": "^11.13.2",
@@ -53,12 +54,16 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.1.0",
+    "pg": "^7.8.1",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0",
     "sweetalert2": "^8.2.3",
     "tslib": "^1.9.0",
+    "winston": "^3.2.1",
+    "winston-transport": "^4.3.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
