Add product loopback model and related components.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -55,6 +55,10 @@
     "dataSource": "OrderManager",
     "public": false
   },
+  "Product": {
+    "dataSource": "OrderManager",
+    "public": false
+  },
   "EmployeeData": {
     "dataSource": "db",
     "public": true
