--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
+    "@types/node": "^11.10.5",
     "angular2-text-mask": "^9.0.0",
     "app-root-path": "^2.1.0",
     "auth0": "^2.14.0",
@@ -56,6 +57,8 @@
     "loopback-connector-postgresql": "^3.5.0",
     "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-image-cropper": "^1.3.8",
+    "ngx-material-file-input": "^1.1.1",
     "pg": "^7.8.1",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
@@ -73,7 +76,6 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
