Add customer data API. Add reset password menu item. Add generic confirm dialog. Add JWT libraries.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -62,5 +62,9 @@
   "EmployeeData": {
     "dataSource": "db",
     "public": true
+  },
+  "CustomerData": {
+    "dataSource": "db",
+    "public": true
   }
 }
