--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "dotenv": "^6.2.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.10.0",
+    "jsonwebtoken": "^8.5.0",
+    "jwks-rsa": "^1.4.0",
     "lodash": "^4.17.11",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
