Fix database commands.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,8 @@ jobs:
           name: Setup database
           command: |
             cat ./database/create_roles.sql | psql -U ubuntu -d $DB --set pw="ciecleci_test" 
-            cat ./database/create_tables.sql | psql -U ubuntu
-            cat ./database/seed_data.sql | psql -U ubuntu
+            cat ./database/create_tables.sql | psql -U ubuntu -d $DB
+            cat ./database/seed_data.sql | psql -U ubuntu -d $DB
       - run:
           name: Build front-end app
           command: |
