--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,10 @@ jobs:
             cat ./database/seed_data.sql | psql -U ubuntu -d $DB
       - run:
           name: Build front-end app
+      # Create a fake icon for loopback initial:before middleware
           command: |
+            mkdir -p dist
+            touch dist/favicon.ico
             npm run build:sdk
             npm run build:ng
       - run:
