--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=4"
   },
   "scripts": {
-    "build:sdk": "set ONE_OFF=true&& \"./node_modules/.bin/lb-sdk\" server/server client/src/app/shared/sdk -l angular2 -d ng2web -i disabled -w enabled",
+    "build:sdk": "set ONE_OFF=true && set NODE_ENV=development&& \"./node_modules/.bin/lb-sdk\" server/server client/src/app/shared/sdk -l angular2 -d ng2web -i disabled -w enabled",
     "build:ng": "cd client && \"../node_modules/.bin/ng\" build",
     "heroku-postbuild": "cd client && \"../node_modules/.bin/ng\" build --aot -c=$NODE_ENV",
     "lint": "ng lint",
