--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "loopback-ds-timestamp-mixin": "^3.4.1",
     "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.1.0",
     "ngx-image-cropper": "^1.3.8",
