--- a/client/angular.json
+++ b/client/angular.json
@@ -26,7 +26,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "../node_modules/auth0-js/build/auth0.min.js"
+              "../node_modules/auth0-js/build/auth0.min.js",
+              "../node_modules/moment/min/moment.min.js"
             ]
           },
           "configurations": {
