--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.1.0",
     "ngx-image-cropper": "^1.3.8",
@@ -73,7 +74,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
