--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
     "dotenv": "^6.2.0",
+    "express-jwt": "^5.3.1",
     "hammerjs": "^2.0.8",
     "helmet": "^3.10.0",
     "jsonwebtoken": "^8.5.0",
@@ -74,7 +75,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
@@ -91,7 +92,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.2",
     "protractor": "~5.4.0",
     "supertest": "^4.0.0",
     "ts-node": "~7.0.0",
