Add database upgrade script. Add statement model.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -67,6 +67,10 @@
     "dataSource": "OrderManager",
     "public": false
   },
+  "Statement": {
+    "dataSource": "OrderManager",
+    "public": false
+  },
   "EmployeeData": {
     "dataSource": "db",
     "public": true
