--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "md5-file": "^4.0.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.1.0",
@@ -87,7 +88,7 @@
     "eslint-config-loopback": "^8.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
