--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.1",
     "@angular/material": "^7.3.2",
+    "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -94,7 +95,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mocha": "^6.1.2",
+    "mocha": "^6.1.4",
     "protractor": "~5.4.0",
     "supertest": "^4.0.0",
     "ts-node": "~7.0.0",
