Create pdf file for statement and order.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -43,6 +43,10 @@
     "dataSource": "OrderManager",
     "public": false
   },
+  "CompanyInfo": {
+    "dataSource": "OrderManager",
+    "public": true
+  },
   "DeliveryRoute": {
     "dataSource": "OrderManager",
     "public": false
