--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-image-cropper": "^1.3.8",
     "ngx-material-file-input": "^1.1.1",
+    "pdfmake": "^0.1.54",
     "pg": "^7.8.1",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
