--- a/package.json
+++ b/package.json
@@ -67,13 +67,16 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-image-cropper": "^1.3.8",
     "ngx-material-file-input": "^1.1.1",
+    "node-schedule": "^1.3.2",
     "pdfmake": "^0.1.54",
     "pg": "^7.8.1",
+    "redis": "^2.8.0",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0",
     "sweetalert2": "^8.2.3",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "winston-transport": "^4.3.0",
     "yn": "^3.1.0",
