--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "compression": "^1.0.3",
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
+    "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
     "hammerjs": "^2.0.8",
