--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ng": "ng",
     "upgrade-db": "node ./database/upgrade-db.js",
     "back-test": "./node_modules/.bin/mocha test/ -name '*.js' --recursive",
-    "front-test": "ng test",
+    "front-test": "cd client && ng test",
     "e2e": "ng e2e"
   },
   "dependencies": {
