--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "@types/jasminewd2": "~2.0.3",
     "chai": "^4.2.0",
     "codelyzer": "~4.5.0",
-    "eslint": "^3.17.1",
+    "eslint": ">=4.18.2",
     "eslint-config-loopback": "^8.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
