Add reCAPTCHA package. Add message model. Add 'inquiry' middleware.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -76,6 +76,10 @@
     "dataSource": "OrderManager",
     "public": false
   },
+  "Message": {
+    "dataSource": "OrderManager",
+    "public": false
+  },
   "Metric": {
     "dataSource": "OrderManager",
     "public": false    
