--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "helmet": "^3.10.0",
     "jsonwebtoken": "^8.5.0",
     "jwks-rsa": "^1.4.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "loopback": "^3.26.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.4.0",
@@ -66,6 +66,7 @@
     "md5-file": "^4.0.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "ng-recaptcha": "^5.0.0",
     "ng2-google-charts": "^4.0.0",
     "ngx-cookie-service": "^2.1.0",
     "ngx-image-cropper": "^1.3.8",
