Add MessageRead model.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -80,6 +80,10 @@
     "dataSource": "OrderManager",
     "public": false
   },
+  "MessageRead": {
+    "dataSource": "OrderManager",
+    "public": false
+  },
   "Metric": {
     "dataSource": "OrderManager",
     "public": false    
