--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@google/maps": "^0.5.5",
     "@mean-expert/loopback-component-realtime": "^1.0.2",
     "@mean-expert/loopback-sdk-builder": "^2.3.1",
     "@types/node": "^11.10.5",
