--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
     "@angular/animations": "^7.2.5",
     "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
