--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "aws-sdk": "^2.398.0",
     "bcrypt": "^3.0.3",
     "bluebird": "^3.5.3",
+    "cache-manager": "^2.10.0",
     "compression": "^1.0.3",
     "core-js": "^2.5.4",
     "cors": "^2.5.2",
@@ -76,6 +77,7 @@
     "ngx-image-cropper": "^1.3.8",
     "ngx-material-file-input": "^1.1.1",
     "node-schedule": "^1.3.2",
+    "object-hash": "^1.3.1",
     "pdfmake": "^0.1.54",
     "pg": "^7.8.1",
     "redis": "^2.8.0",
