--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "redis": "^2.8.0",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.0.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "strong-error-handler": "^3.0.0",
     "sweetalert2": "^8.2.3",
     "tslib": "^1.9.0",
@@ -97,20 +99,21 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "~2.0.3",
     "chai": "^4.2.0",
     "codelyzer": "~4.5.0",
     "cross-env": "^5.2.0",
     "eslint": ">=4.18.2",
     "eslint-config-loopback": "^8.0.0",
-    "jasmine-core": "~2.99.1",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^2.0.0",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "mocha": "^6.1.4",
     "protractor": "~5.4.0",
     "supertest": "^4.0.0",
