--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
     "hammerjs": "^2.0.8",
-    "helmet": "^3.10.0",
+    "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.0",
     "jwks-rsa": "^1.4.0",
     "lodash": "^4.17.15",
@@ -106,6 +106,7 @@
     "cross-env": "^5.2.0",
     "eslint": ">=4.18.2",
     "eslint-config-loopback": "^8.0.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "jasmine": "^3.4.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -116,6 +117,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "mocha": "^6.1.4",
     "protractor": "~5.4.0",
+    "rewire": "^4.0.1",
     "supertest": "^4.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
