--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "loopback-connector-postgresql": "^3.5.0",
     "md5-file": "^4.0.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "morgan": "^1.9.1",
     "ng-recaptcha": "^5.0.0",
     "ng2-google-charts": "^4.0.0",
